# MCServerControl

./: .gitignore  MANIFEST.in  README.md  __main__.py  demo.py  pack_src.sh  pyproject.toml  setup.py
mcservercontrol/: __init__.py  _script_template.py  broadcastServer.py  config.json  configReader.py  exec.py  globalVar.py  listener.py  listenerBase.py  observer.py  player.py  server.py
mcservercontrol/addons/: __init__.py  killItem.py  onlineControl.py  save.py  teleportPlayer.py
mcservercontrol/presetOB/: onlineControl.py
mcservercontrol/template/: __main__.py
mcservercontrol_demo/: __init__.py
src/: actions.py  broadcastServer.py  config.json  configReader.py  globalVar.py  listener.py  listenerBase.py  player.py  server.py  serverLogParser.py  start.py  timeUtils.py
tests/: test_player.py
